--- a/app/views/draft_picks/index.html.erb
+++ b/app/views/draft_picks/index.html.erb
@@ -5,6 +5,8 @@
   </script>
 <% end %>
 
+<%= position_menu %>
+
 <table id="draft_board">
   <tr>
     <%= content_tag :th, 'Round', :class => 'rounded' %>
