--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,8 @@
 <head>
   <title>Draftboard</title>
   <%= stylesheet_link_tag :all %>
+  <%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js" %>
+  <%= javascript_include_tag "jquery-ui-1.8.8.custom.min.js" %>    
   <%= javascript_include_tag :defaults %>
   <%= yield :javascript_includes %>  
   <%= csrf_meta_tag %>
