--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,9 @@
   <title>Draftboard</title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js" %>
-  <%= javascript_include_tag "jquery-ui-1.8.8.custom.min.js" %>    
-  <%= javascript_include_tag :defaults %>
+  <%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" %>
+  <%= javascript_include_tag 'application.js' %>
+  <%= javascript_include_tag 'rails.js' %>  
   <%= yield :javascript_includes %>  
   <%= csrf_meta_tag %>
 </head>
