--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,12 @@
 <html>
 <head>
   <title>Draftboard</title>
+  <%= stylesheet_link_tag "application" %>
+  
   <%= stylesheet_link_tag 'draftboard.css' %>
   <%= stylesheet_link_tag 'http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/start/jquery-ui.css' %>
   
-  <%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js" %>
-  <%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" %>
-  <%= javascript_include_tag 'application.js' %>
-  <%= javascript_include_tag 'rails.js' %>  
+  <%= javascript_include_tag "application" %>  
   <%= yield :javascript_includes %>  
   <%= csrf_meta_tag %>
 </head>
